--- a/Plugin/manifest.json
+++ b/Plugin/manifest.json
@@ -7,8 +7,13 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icons/icon.png",
     "default_popup": "popup.html"
+  },
+
+  "icons": { "16": "icons/icon16.png",
+             "48": "icons/icon48.png",
+             "128": "icons/icon128.png" 
   },
 
   // Permissions of the extension
