--- a/Plugin/manifest.json
+++ b/Plugin/manifest.json
@@ -7,7 +7,7 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icons/icon.png",
+    "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
 
